[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/debug/debug_rythmic_generator.gd" type="Script" id=1]
[ext_resource path="res://Fonts/ShadowsIntoLight-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Themes/script_minimal.tres" type="Theme" id=3]
[ext_resource path="res://addons/musiclib/LegoBox/SongTrackView.tscn" type="PackedScene" id=4]
[ext_resource path="res://Themes/musicLab_theme.tres" type="Theme" id=5]
[ext_resource path="res://Fonts/Roboto_Condensed-Bold.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.854902, 0.854902, 0.854902, 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=4]
resource_name = "anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 26
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.321569, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="debug_rythmic_generator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Dashboard" type="Panel" parent="."]
margin_left = 48.0
margin_top = 24.0
margin_right = 720.0
margin_bottom = 232.0
custom_styles/panel = SubResource( 1 )

[node name="manettes" type="HBoxContainer" parent="Dashboard"]
margin_left = 32.0
margin_top = 48.0
margin_right = 99.0
margin_bottom = 88.0
custom_constants/separation = 20

[node name="frame_size" type="VBoxContainer" parent="Dashboard/manettes"]
margin_right = 67.0
margin_bottom = 124.0
custom_constants/separation = 10

[node name="frame_size" type="Label" parent="Dashboard/manettes/frame_size"]
margin_right = 67.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "frame size"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Dashboard/manettes/frame_size"]
margin_top = 24.0
margin_right = 67.0
margin_bottom = 124.0
alignment = 1

[node name="frame_size_sl" type="VSlider" parent="Dashboard/manettes/frame_size/HBoxContainer"]
margin_left = 23.0
margin_right = 43.0
margin_bottom = 100.0
rect_min_size = Vector2( 20, 100 )
min_value = 4.0
max_value = 16.0
step = 4.0
value = 4.0

[node name="n_notes" type="VBoxContainer" parent="Dashboard/manettes"]
margin_left = 87.0
margin_right = 137.0
margin_bottom = 124.0
custom_constants/separation = 10

[node name="name" type="Label" parent="Dashboard/manettes/n_notes"]
margin_right = 50.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "n_notes"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Dashboard/manettes/n_notes"]
margin_top = 24.0
margin_right = 50.0
margin_bottom = 124.0
alignment = 1

[node name="n_notes_sl" type="VSlider" parent="Dashboard/manettes/n_notes/HBoxContainer"]
margin_left = 15.0
margin_right = 35.0
margin_bottom = 100.0
rect_min_size = Vector2( 20, 100 )
min_value = 1.0
max_value = 16.0
value = 4.0

[node name="density" type="VBoxContainer" parent="Dashboard/manettes"]
margin_left = 157.0
margin_right = 204.0
margin_bottom = 124.0
custom_constants/separation = 10

[node name="name" type="Label" parent="Dashboard/manettes/density"]
margin_right = 47.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "density"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Dashboard/manettes/density"]
margin_top = 24.0
margin_right = 47.0
margin_bottom = 124.0
alignment = 1

[node name="density_sl" type="VSlider" parent="Dashboard/manettes/density/HBoxContainer"]
margin_left = 13.0
margin_right = 33.0
margin_bottom = 100.0
rect_min_size = Vector2( 20, 100 )
min_value = 0.1
max_value = 1.0
step = 0.0
value = 0.5

[node name="syncopation" type="VBoxContainer" parent="Dashboard/manettes"]
margin_left = 224.0
margin_right = 301.0
margin_bottom = 124.0
custom_constants/separation = 10

[node name="name" type="Label" parent="Dashboard/manettes/syncopation"]
margin_right = 77.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "syncopation"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Dashboard/manettes/syncopation"]
margin_top = 24.0
margin_right = 77.0
margin_bottom = 124.0
alignment = 1

[node name="syncopation_sl" type="VSlider" parent="Dashboard/manettes/syncopation/HBoxContainer"]
margin_left = 28.0
margin_right = 48.0
margin_bottom = 100.0
rect_min_size = Vector2( 20, 100 )
min_value = 0.1
max_value = 1.0
step = 0.0
value = 0.2

[node name="triple_feel" type="VBoxContainer" parent="Dashboard/manettes"]
margin_left = 321.0
margin_right = 383.0
margin_bottom = 124.0
custom_constants/separation = 10

[node name="name" type="Label" parent="Dashboard/manettes/triple_feel"]
margin_right = 62.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "triple feel"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Dashboard/manettes/triple_feel"]
margin_top = 24.0
margin_right = 62.0
margin_bottom = 124.0
alignment = 1

[node name="triple_feel_sl" type="VSlider" parent="Dashboard/manettes/triple_feel/HBoxContainer"]
margin_left = 21.0
margin_right = 41.0
margin_bottom = 100.0
rect_min_size = Vector2( 20, 100 )
max_value = 1.0
step = 0.0

[node name="repetition" type="VBoxContainer" parent="Dashboard/manettes"]
margin_left = 403.0
margin_right = 466.0
margin_bottom = 124.0
custom_constants/separation = 10

[node name="name" type="Label" parent="Dashboard/manettes/repetition"]
margin_right = 63.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "repetition"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Dashboard/manettes/repetition"]
margin_top = 24.0
margin_right = 63.0
margin_bottom = 124.0
alignment = 1

[node name="repetition_sl" type="VSlider" parent="Dashboard/manettes/repetition/HBoxContainer"]
margin_left = 21.0
margin_right = 41.0
margin_bottom = 100.0
rect_min_size = Vector2( 20, 100 )
max_value = 1.0
step = 0.0
value = 0.5

[node name="position" type="VBoxContainer" parent="Dashboard/manettes"]
margin_left = 486.0
margin_right = 538.0
margin_bottom = 124.0
custom_constants/separation = 10

[node name="name" type="Label" parent="Dashboard/manettes/position"]
margin_right = 52.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "position"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Dashboard/manettes/position"]
margin_top = 24.0
margin_right = 52.0
margin_bottom = 124.0
alignment = 1

[node name="position_sl" type="VSlider" parent="Dashboard/manettes/position/HBoxContainer"]
margin_left = 16.0
margin_right = 36.0
margin_bottom = 100.0
rect_min_size = Vector2( 20, 100 )
max_value = 1.0
step = 0.0

[node name="ending_strength_bonus" type="VBoxContainer" parent="Dashboard/manettes"]
margin_left = 558.0
margin_right = 658.0
margin_bottom = 124.0
custom_constants/separation = 10

[node name="name" type="Label" parent="Dashboard/manettes/ending_strength_bonus"]
margin_right = 100.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ending strength"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Dashboard/manettes/ending_strength_bonus"]
margin_top = 24.0
margin_right = 100.0
margin_bottom = 124.0
alignment = 1

[node name="ending_strength_bonus_sl" type="VSlider" parent="Dashboard/manettes/ending_strength_bonus/HBoxContainer"]
margin_left = 40.0
margin_right = 60.0
margin_bottom = 100.0
rect_min_size = Vector2( 20, 100 )
max_value = 4.0
step = 0.0
value = 2.0

[node name="seed" type="VBoxContainer" parent="Dashboard/manettes"]
margin_left = 678.0
margin_right = 709.0
margin_bottom = 124.0
custom_constants/separation = 10

[node name="name" type="Label" parent="Dashboard/manettes/seed"]
margin_right = 31.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "seed"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Dashboard/manettes/seed"]
margin_top = 24.0
margin_right = 31.0
margin_bottom = 124.0
alignment = 1

[node name="seed_sl" type="VSlider" parent="Dashboard/manettes/seed/HBoxContainer"]
margin_left = 5.0
margin_right = 25.0
margin_bottom = 100.0
rect_min_size = Vector2( 20, 100 )
min_value = -1.0
value = -1.0

[node name="generate_btn" type="Button" parent="."]
margin_left = 512.0
margin_top = 256.0
margin_right = 712.0
margin_bottom = 312.0
text = "Generate"

[node name="console_rtl" type="RichTextLabel" parent="."]
margin_left = 768.0
margin_top = 176.0
margin_right = 1224.0
margin_bottom = 504.0
theme = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )

[node name="SongViewContainer" type="Control" parent="."]
margin_left = 179.0
margin_top = 538.0
margin_right = 1259.0
margin_bottom = 678.0
hint_tooltip = "
"
theme = ExtResource( 5 )

[node name="backGround_cr" type="ColorRect" parent="SongViewContainer"]
margin_left = 16.0
margin_right = 1056.0
margin_bottom = 140.0
rect_min_size = Vector2( 1040, 140 )
color = Color( 0, 0, 0, 1 )

[node name="computing_label" type="Label" parent="SongViewContainer"]
modulate = Color( 1, 1, 1, 0.75 )
margin_right = 1045.0
margin_bottom = 134.0
custom_colors/font_color = Color( 0.356863, 0.356863, 0.356863, 1 )
custom_fonts/font = SubResource( 3 )
text = "Computing SATB solutions..."
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="SongViewContainer/computing_label"]
anims/anim = SubResource( 4 )

[node name="SongTrackView" parent="SongViewContainer" instance=ExtResource( 4 )]
margin_left = 16.0
margin_right = -14.0
rect_min_size = Vector2( 1050, 140 )
hint_tooltip = "[F1] [F2] [F3] [F4] to change display
[F5] [F6] to zoom in / out
Use the mouse wheel or the scroll bar  to set the play position
[Shift . ] to set a playing marker
[space bar] to play /stop
[0] to rewind"
ruler_font_path = "res://Fonts/Roboto-VariableFont_wdth,wght.ttf"
ruler_font_size = 11
font_size = 8
selected_border_color = Color( 0, 0.0156863, 1, 1 )
selection_border_px = 2
rn_view_font_size = 18
rn_view_scale_font_path = "res://Fonts/AtkinsonHyperlegible-Regular.ttf"
rn_view_scale_font_size = 12

[node name="play_head_cr" type="ColorRect" parent="SongViewContainer"]
margin_left = 13.0
margin_right = 17.0
margin_bottom = 144.0
rect_min_size = Vector2( 4, 130 )
color = Color( 0.239216, 0.321569, 1, 1 )

[node name="trackDisplayMode" type="OptionButton" parent="SongViewContainer"]
margin_left = -144.0
margin_right = -3.0
margin_bottom = 20.0
hint_tooltip = "Click to change the timeline
display or use key:
[F1] midi notes
[F2] jazz chords
[F3] Roman Numeral
[F4] Keyboard
to change display"
theme = ExtResource( 3 )
text = "midi view"
align = 1
items = [ "midi view", null, false, 0, null, "jazz chord view", null, false, 1, null, "roman view", null, false, 2, null, "keyboard view", null, false, 3, null ]
selected = 0

[node name="trackViewScale_sl" type="VSlider" parent="SongViewContainer"]
margin_left = -40.0
margin_top = 62.0
margin_right = -24.0
margin_bottom = 142.0
rect_min_size = Vector2( 16, 80 )
hint_tooltip = "Track zoom factor :
[F5] : zoom out
[F6] : zoom in"
min_value = 1.0
max_value = 20.0
value = 2.0

[node name="zoom" type="Label" parent="SongViewContainer"]
margin_left = -54.0
margin_top = 32.0
margin_right = -13.0
margin_bottom = 55.0
hint_tooltip = "Zoom setting of the time line.
[F5] / [F6] to increase / decrease the display zoom  factor"
custom_colors/font_color = Color( 0.45098, 0.45098, 0.45098, 1 )
text = "zoom"

[node name="playStop_btn" type="Button" parent="."]
margin_left = 56.0
margin_top = 256.0
margin_right = 216.0
margin_bottom = 320.0
hint_tooltip = "Press [SPACE] bar to
play / stop the progression"
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "Play"

[node name="rewind_btn" type="Button" parent="."]
margin_left = 56.0
margin_top = 331.0
margin_right = 216.0
margin_bottom = 379.0
hint_tooltip = "Rewind to the start of
the chord progression.
Keyboard shortcut: [0]"
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "<<"

[connection signal="pressed" from="generate_btn" to="." method="_on_generate_btn_pressed"]
[connection signal="value_changed" from="SongViewContainer/trackViewScale_sl" to="." method="_on_trackViewScale_sl_value_changed"]
[connection signal="pressed" from="playStop_btn" to="." method="_on_playStop_btn_pressed"]
[connection signal="pressed" from="rewind_btn" to="." method="_on_rewind_btn_pressed"]
